# Hermes

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  USAGE.md  app.py  docker-compose-dev.yml  docker-compose-production.yml  docker-compose.yml  entrypoint.sh  migrate.sh  notes.md  piccolo_conf.py  piccolo_conf_test.py  pyproject.toml
.github/workflows/: push.yml
docker/saq/: Dockerfile  entrypoint.sh
docker/web/: Dockerfile  entrypoint.sh
home/: configs.py  custom_request.py  endpoints.py  exception_handlers.py  piccolo_app.py  saq.py  tables.py
home/analysis/: __init__.py  bandit.py  brakeman.py  gosec.py  interface.py  opengrep.py  semgrep.py
home/analysis/example_outputs/: bandit.json  brakeman.json  gosec.json  readme.md  semgrep.json
home/controllers/: __init__.py  archives_controller.py  login_controller.py  logout_controller.py  password_controller.py  projects_controller.py  signup_controller.py
home/filters/: __init__.py  datetime.py  pretty_json.py
home/middleware/: __init__.py  ensure_auth.py
home/piccolo_migrations/: home_2024_07_20t23_06_36_945497.py  home_2024_07_21t01_14_12_071989.py  home_2024_08_01t22_58_05_582881.py  home_2024_08_01t23_05_04_496173.py  home_2024_08_01t23_30_37_757287.py  home_2024_08_04t16_15_49_582317.py  home_2024_08_04t23_38_08_423742.py  home_2024_08_07t21_01_22_676255.py  home_2024_08_07t22_29_02_552809.py  home_2024_08_07t23_39_16_264669.py  home_2024_08_07t23_51_30_314629.py  home_2024_08_08t21_02_31_204025.py  home_2024_08_08t21_08_44_241650.py  home_2024_08_08t21_24_47_780460.py  home_2024_08_08t21_40_17_428720.py  home_2024_08_10t19_26_33_399953.py  home_2024_08_11t23_14_26_914739.py  home_2024_08_11t23_19_45_448872.py  home_2024_08_14t19_32_04_981993.py  home_2024_08_14t20_01_51_033243.py  home_2024_08_14t20_04_56_987874.py  home_2024_08_14t20_09_39_553451.py  home_2024_09_07t17_39_02_802027.py  home_2024_09_14t20_13_48_245769.py  home_2024_09_14t21_09_56_790331.py  home_2024_09_14t21_30_23_194449.py  home_2025_04_22t18_22_30_002388.py  home_2025_04_22t21_48_47_495055.py  home_2025_04_22t21_50_02_864884.py  home_2026_04_15t20_46_19_614796.py
home/tables/: __init__.py  archives.py  notifications.py  profile.py  project.py  project_automation.py  project_filters.py  scan.py  vulnerability.py
home/tasks/: __init__.py  keep_updated.py
home/templates/: base.jinja  home.jinja  login.jinja  settings.jinja  sidebar.jinja
home/util/: __init__.py  chunk_string.py  flash.py  get_csp.py  keep_updated.py  orjson_util.py  pwned_password_check.py  str_to_bool.py
static/: main.js  projects.js
tests/: test_scan_export.py
(+19 files in other folders)
