[tool.poetry]
name = "hermes"
package-mode = false
description = "A single pane of glass for static code analysis"
authors = ["Skelmis <skelmis.craft@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
piccolo = {extras = ["all"], version = "^1.16.0"}
litestar = {extras = ["cryptography"], version = "^2.12.1"}
uvicorn = "^0.32.0"
piccolo-admin = "^1.6.0"
python-dotenv = "^1.0.1"
orjson = "^3.10.11"
skelmis-commons = "^1.4.0"
pytz = "^2024.1"
piccolo-api = "^1.4.1"
bandit = "^1.7.9"
semgrep = "^1.95.0"
saq = {extras = ["hiredis", "web"], version = "^0.18.2"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
